some site update
News:
+ now the dates in the news are in a more understandable form,
+ added publication time,
+ last post date corrected.

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
 	margin: auto;
 }
 
-h1, a, p{ font-family: arial }
+h1, a, p, i{ font-family: arial }
 
 .fl { display: flex; }
 .fl-col { flex-direction: column; }
